css/style.css
@import url("https://fonts.googleapis.com/css2?family=VT323&display=swap");

:root {
  --desktop-text-color: white;
  --secondary-text-color: black;
  --desktop-color: #386fa7;
  --active-color: #000080;
  --inactive-color: #808080;

  --accent-color: #d7d0c8;
  --accent-hover: #c8c8c8;
  --accent-click: #c5c0b7;

  --border-color: #b2afab;
  --max-width: 1440px;
  --container-padding: 0 0.5rem 0 0.5rem;

  --taskbar-height: 2.5rem;

  --taskbar-secondary-width: 4rem; /* to size the start and time wrappers */
}

* {
  padding: 0;
  margin: 0;
  box-sizing: border-box;
  transition: all 0.15s;
  font-family: Arial, Helvetica, sans-serif;
}

img,
svg,
video {
  max-width: 100%;
  display: block;
}

a {
  color: inherit;
  text-decoration: none;
}

body {
  color: var(--text-color);
  min-height: 100dvh;
  max-height: 100dvh;
  height: 100vh;
  background-color: black;
}

.main-wrapper {
  display: flex;
  flex-direction: column;
  height: 100%;
  max-width: var(--max-width);
  margin: 0 auto;
  background-color: var(--desktop-color);
}

/* Global Custom*/

.bold {
  text-transform: uppercase;
  font-weight: bold;
}

.disable-zoom {
  touch-action: manipulation; /* disable double tap zoom */
}

.disable-selection {
  -webkit-touch-callout: none;
  -webkit-user-select: none;
  -khtml-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-tap-highlight-color: rgba(0, 0, 0, 0.2);
}

@media (min-width: 320px) {
}
@media (min-width: 480px) {
}
@media (min-width: 768px) {
  /* taskbar */
  .start-menu {
    width: 13rem;
  }

  .start-menu-title {
    font-size: 0.75rem;
  }

  .right-taskbar-wrapper {
    width: calc(var(--taskbar-secondary-width) * 1.3);
    height: 100%;
    padding-left: 0.125rem;
    border: 2px inset rgb(162, 162, 162);
    font-size: 0.75rem;
    transition: none;
  }
}
@media (min-width: 992px) {
}
@media (min-width: 1200px) {
}
@media (min-width: 1440px) {
  .main-wrapper {
    border: 0.125rem ridge rgb(255, 255, 255);
  }
}

